--- a/examples/jupyter_examples/Example simulation run.ipynb
+++ b/examples/jupyter_examples/Example simulation run.ipynb
@@ -144,7 +144,7 @@
       "author        {'name': 'Unknown name', 'email': 'Unknown ema...\n",
       "model         {'url': 'https://github.com/KarrLab/wc_sim.git...\n",
       "run           {'start_time': 2018-05-28 17:25:24.951885, 'ru...\n",
-      "simulation    {'time_init': 0.0, 'time_max': 100.0, 'time_st...\n",
+      "simulation    {'time_init': 0.0, 'max_time': 100.0, 'time_st...\n",
       "dtype: object\n"
      ]
     }
